--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.6",
+    "express-ip": "^1.0.4",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
@@ -41,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "ngrok": "^3.2.7",
     "nodemon": "^2.0.2"
   }
 }
