--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.1.6",
     "express-ip": "^1.0.4",
+    "mongoose": "^5.9.6",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
