--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-markdown": "^4.3.1",
     "react-scripts": "3.4.0",
+    "react-syntax-highlighter": "^12.2.1",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0"
   },
