--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.0",
     "react-markdown": "^4.3.1",
+    "react-redux": "^7.2.0",
     "react-scripts": "3.4.0",
     "react-syntax-highlighter": "^12.2.1",
+    "redux": "^4.0.5",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0"
   },
