--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "http-proxy-middleware": "^1.0.3",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0",
@@ -43,6 +44,5 @@
     "env-cmd": "^10.1.0",
     "ngrok": "^3.2.7",
     "nodemon": "^2.0.2"
-  },
-  "proxy": "http://localhost:4000"
+  }
 }
